compiler/testData/diagnostics/tests/regressions/kt618.jet
package lol

class B() {
    fun plusAssign(<!UNUSED_PARAMETER!>other<!> : B) : String {
        return "s"
    }
    fun minusAssign(<!UNUSED_PARAMETER!>other<!> : B) : String {
        return "s"
    }
    fun modAssign(<!UNUSED_PARAMETER!>other<!> : B) : String {
        return "s"
    }
    fun divAssign(<!UNUSED_PARAMETER!>other<!> : B) : String {
        return "s"
    }
    fun timesAssign(<!UNUSED_PARAMETER!>other<!> : B) : String {
        return "s"
    }
}

fun main(args : Array<String>) {
    var c = B()
    <!TYPE_MISMATCH!>c += B()<!>
    <!TYPE_MISMATCH!>c *= B()<!>
    <!TYPE_MISMATCH!>c /= B()<!>
    <!TYPE_MISMATCH!>c -= B()<!>
    <!TYPE_MISMATCH!>c %= B()<!>
}